:beetle: :art: css: Prevent images and media from flowing off-screen
I embedded an image on the Working Group page, and it flowed far
off-screen because it was bigger than the viewport. Just a simple catch
to make sure media stays inside of its container.

--- a/_sass/pages/_wgs.scss
+++ b/_sass/pages/_wgs.scss
@@ -1,3 +1,9 @@
+/* Embed asset tweaks */
+.main-content figure, iframe, img, picture, video {
+    height: auto;
+    max-width: 100%;
+}
+
 .page-title {
     margin-bottom: 10vh;
 }
